added flight and passanger data, bookings can be created or soft deleted
