# routes/api.php
@@ -48,9 +48,7 @@ Route::group(['prefix' => 'flights', 'middleware' => 'auth:api'], function () {
 // Booking Routes
 Route::group(['prefix' => 'bookings', 'middleware' => 'auth:api'], function () {
     Route::get('/', [FlightController::class, 'userBookings']);
-    Route::post('/', [FlightController::class, 'createBooking']);
     Route::get('{bookingId}', [FlightController::class, 'showBooking']);
-    Route::put('{bookingId}', [FlightController::class, 'updateBooking']);
     Route::delete('{bookingId}', [FlightController::class, 'cancelBooking']);
 });
 
